# game-script

./: .gitignore  CMakeLists.txt  CTest.c  CxxTest.cpp  FindUnitTest++.cmake  Main.cpp  Makefile  Moon.h  README.md  TestApplication.cpp  TestApplication.h  ast.c  ast.cpp  ast.h  ast_build.cpp  ast_build.h  ast_build_test.cpp  ast_parse.h  autotest.c  autotest.h  bif.md  cci-script.txt  classics.mn  cli.c  common.c  common.h  documentation.md  dom.c  dom.cpp  dom.h  dom_build.cpp  dom_build.h  dom_build_test.cpp  dom_expect.h  dom_expect_test.cpp  dom_pattern.h  dom_pattern_test.cpp  dom_test.cpp  dupa.mn  env.cpp  (+56 more)
API/: CMoon.h  Exceptions.h  Interpreter.cpp  Interpreter.h  MoonEngine.cpp  MoonEngine.h  Value.cpp  Value.h
Debug/: vc120.idb
Debug/moon-lang.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moon-lang.lastbuildstate
LIB/: api_value.c  api_value.h  clif.c  clif.h  mndetail.c  mndetail.h  moon.c  moon.h
REPL/: main.c
SHARE/: api_value.c  api_value.h
TEST/: test.c  test.h  test_app.c  test_cci.c  test_detail.h  test_front.c  test_helpers.c  test_helpers.h  test_runtime_basic.c  test_runtime_bif.c  test_runtime_func.c  test_runtime_parafunc.c  test_runtime_scope.c  test_runtime_special.c
TEST2/: test.c
VM/: main.c  vm.c  vm.h  vm_next.c  vm_run.c  vm_test.c  vm_test.h  vm_test_arythmetic.c  vm_test_flow.c  vm_test_incr_decr.c  vm_test_push_pop.c  vm_test_put.c
ast/: Bif.cpp  Bif.cpp.bak  Bif.h  Bif.h.bak  Bind.cpp  Bind.h  Compound.cpp  Compound.h  FuncCall.cpp  FuncCall.h  FuncDef.cpp  FuncDef.h  Function.cpp  Function.h  Literal.cpp  Literal.h  Node.h  Reference.cpp  Reference.h  about.md  ast.c  ast.h  ast_bind.c  ast_cpd.c  ast_fcall.c  ast_fdecl.c  ast_lit.c  ast_loc_map.c  ast_loc_map.h  ast_parse.c  ast_parse.h  ast_ref.c  ast_serialize.c  ast_unit.c  pattern.c  pattern.h
bif/: bif_array.c  bif_arythm.c  bif_common.c  bif_compare.c  bif_detail.h  bif_logic.c
client/lib/: clif.c  clif.h  mndetail.c  mndetail.h  moon.c  moon.h
client/repl/: repl.c  repl.h  repl_cmd.c  repl_cmd.h  repl_expr.c  repl_expr.h
client/run/: run.c  run.h
client/test/: test.c  test.h  test_cci.c  test_detail.h  test_front.c  test_helpers.c  test_helpers.h  test_parse.c  test_regr.c  test_runtime.c  test_runtime_basic.c  test_runtime_bif.c  test_runtime_func.c  test_runtime_parafunc.c  test_runtime_scope.c
client/test2/: test2.c  test2.h  test2_detail.h  test2_front.c  test2_runtime.c  test2_runtime_basic.c  test2_runtime_func.c
common/: Exceptions.h  Log.h  SourceLocation.h  Stack.h  StackFrame.h  api_value.c  api_value.h  ast.c  ast.h  ast_loc_map.c  ast_loc_map.h  ast_serialize.c  collection.h  define.h  error.c  error.h  except.h  expr.cpp  expr.h  expr_test.cpp  log.cpp  log.h  logg.h  ltr_parse.c  ltr_parse.h  memory.c  memory.h  pattern.c  pattern.h  pattern_serialize.c  sexpr_tools.c  sexpr_tools.h  src_iter.c  src_iter.h  sstream.c  sstream.h  strbuild.h  term.c  term.h  test.c  (+6 more)
error/: error.c  error.h
except/: Ast.h  CompilationError.h  DomBuilder.h  Scope.h  Tokenizer.h
front/: about.md  dom.c  dom.h  lex.c  lex.h  parse.c  parse.h  tok.c  tok.h
interpret/: env.cpp  env.h  env_bif.cpp  env_bif.h  env_bif_test.cpp  env_build.cpp  env_build.h  env_build_test.cpp  env_test.cpp
itpr/: Algorithm.cpp  Algorithm.h  AstBif.cpp  AstBif.h  AstBind.cpp  AstBind.h  AstCompound.cpp  AstCompound.h  AstFuncCall.cpp  AstFuncCall.h  AstFuncDecl.cpp  AstFuncDecl.h  AstFuncDef.cpp  AstFuncDef.h  AstFunction.cpp  AstFunction.h  AstLiteral.cpp  AstLiteral.h  AstNode.h  AstReference.cpp  AstReference.h  Exceptions.h  Interpreter.cpp  Interpreter.h  Scope.cpp  Scope.h  Stack.h  StackFrame.h  Value.cpp  Value.h  bif.c  bif.h  bif_array.c  bif_arythm.c  bif_common.c  bif_compare.c  bif_detail.h  bif_logic.c  eval.c  eval.h  (+12 more)
itpr/bif/: AstBif.cpp  AstBif.h
lang/: expr.cpp  expr.h  expr_test.cpp  func_def.h  types.cpp  types.h
parse/: Parser.cpp  Parser.h  ParserBase.h  SexprAstBuilder.cpp  SexprAstBuilder.h  SexprDomBuilder.cpp  SexprDomBuilder.h  SexprDomNode.h  SexprParser.cpp  SexprParser.h  SexprToken.h  SexprTokenizer.cpp  SexprTokenizer.h  StrIter.h  dom.h  dom_build.cpp  dom_build.h  dom_build_test.cpp  parse_test.cpp  tok.h  tokenize.cpp  tokenize.h  tokenize_test.cpp
parse/sexpr/: Algorithm.h  AlgorithmAstParsers.cpp  AlgorithmCommon.cpp  AlgorithmDomBuilder.cpp  AlgorithmLiteral.cpp  AlgorithmTokenizer.cpp  AstParser.cpp  AstParser.h  DomNode.h  Exceptions.h  Token.h
repl/: repl.c  repl.h  repl_cmd.c  repl_cmd.h  repl_expr.c  repl_expr.h  repl_state.c  repl_state.h
run/: run.c
runtime/: about.md  bif.h  bif_array.c  bif_arythm.c  bif_common.c  bif_compare.c  bif_compound.c  bif_detail.h  bif_logic.c  bif_random.c  bif_text.c  bif_type.c  cpprand.cpp  cpprand.h  dbg.c  dbg.h  eval.c  eval.h  eval_bind.c  eval_cpd.c  eval_detail.h  eval_fcall.c  eval_fdef.c  eval_func_call.c  eval_literal_atomic.c  eval_literal_compound.c  eval_special.c  eval_special_bind_pattern.c  eval_special_datatype.c  eval_special_func_def.c  rt_val.c  rt_val.h  rt_val_peek.c  rt_val_poke.c  rt_val_push.c  runtime.c  runtime.h  stack.c  stack.h  symmap.c  (+3 more)
runtime/bif/: about.md  bif.h  bif.md  bif_array.c  bif_arythm.c  bif_common.c  bif_compare.c  bif_compound.c  bif_detail.h  bif_logic.c  bif_random.c  bif_random.cpp  bif_text.c  bif_type.c
runtime/eval/: eval.c  eval.h  eval_bind.c  eval_compound.c  eval_control.c  eval_control_bind_pattern.c  eval_cpd.c  (+21 more)
sexpr/: dom.c  dom.h  tok.c  tok.h
test/: test.c  test.h  test_detail.h  test_parse.c  test_regr.c  test_runtime.c
util/: collection.h  error.c  error.h  log.h  memory.c  memory.h  sexpr_tools.c  src_iter.h  strbuild.h  term.c  term.h  timer_stack.c  timer_stack.h
